# Softwaredesign2025

./: .gitignore  B-01.py  B-02.py  README.md  SelfStudySessionB.ipynb  SelfStudySessionC.ipynb  SelfStudySessionD.ipynb  SelfStudySessionE.ipynb  pyproject.toml
libs/YMDUtil/: README.md  pyproject.toml
libs/YMDUtil/src/YMDUtil/: YMD.py  __init__.py
