[project]
name = "Softwaredesign2025"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "SUhonzz", email = "uh5864@mci4me.at"},
]
dependencies = ["pandas>=2.3.3", "jupyter>=1.1.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
